--- a/local_rmd_nbooks/m2_actual_cells_frm_raw.Rmd
+++ b/local_rmd_nbooks/m2_actual_cells_frm_raw.Rmd
@@ -76,12 +76,6 @@ suppressPackageStartupMessages({
 ## setup, read input files and exploratory visualizations and general functions
 
 ```{r, setup}
-# library(reticulate)
-# # use_condaenv("/Users/jr35/envs/scv_jupcon/", required = TRUE)
-# # matplotlib <- reticulate::import("matplotlib")
-# # matplotlib$use("Agg", force = TRUE)
-# 
-# knitr::opts_knit$set(root.dir = '/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/Mali')
 knitr::opts_knit$set(root.dir = '/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/Mali2')
 
 ```
@@ -90,104 +84,104 @@ knitr::opts_knit$set(root.dir = '/lustre/scratch126/tol/teams/lawniczak/users/jr
 
 ```{r}
 
-##Strain cluster colours
-strain_cols_n <-c("#910000", "#ff1a8d", "#007c71", "#0ea300", "#00deca", "#9a96c7", "#5d57a4", "#a8875b","#708db3", "#c39a00", "#ffd94d", "#9770b3", "#C9E0F1", "#a40000" , "#00b7a7", "#ffcd12","thistle","#a40000" , "#00b7a7", "#e7f1f9", 'black', '#050301','grey')
-#, 'lavender', 'lightgray', 'grey'
-names(strain_cols_n) <- c('SC2', 'SC1','SC5',  'SC4', 'SC3',  'SC6', 'SC7', 'SC8', 'SC9', 'SC10', 'SC11', 'SC12', 'S3_b', 'S1', 'S2', 'Singlet', 'Negative', 'SC1_3i','Doublet', 'Lab', 'Less5', 'PoorQC', NA)
-
-strain_cols <- c(met.brewer(name = 'Thomas')[c(1:8)],'black', 'light gray')
-
-names(strain_cols) = c('G1', 'G2', 'G3', 'G4','G5', 'G6','G7', 'G8', 'Doublet', 'Negative')
-
-strain_cols =c(strain_cols,strain_cols_n)
-
-dblt_cols <- c(brewer.pal(name = 'Set1', n = 8)[c(1:5,7:8)], 'lightblue')
-names(dblt_cols) <- c('ScDfSt', 'ScDf', 'ScSt', 'DfSt', 'Sc', 'Df','St', 'Singlet')
-
-cell_qc_filt_nm_lvls <- c("sc_neg", "lo_gn_cnt",  "hi_gn_cnt",  "hi_mtp", "ss_db",  "strn_db", "stg_db", "pass")
-cell_qc_cols <- c(brewer.pal(name = 'Set1', n = 8)[c(1:5,7:8)], 'lightblue') %>% set_names(cell_qc_filt_nm_lvls)
-
-dblt_ss_cols <- c(brewer.pal(name = 'Set1', n = 8)[c(1:3)], 'lightgrey')
-names(dblt_ss_cols) <- c('Strain & stage', 'Strain', 'Stage', 'Singlet')
-
-cluster_cols <- brewer.pal(8, name = 'Set2')[c(1:4,7,8)] %>% set_names(as.character(c(0:5)))
-
-stg_refnd_lvls = c("Early ring", "Late ring", "Early trophozoite", "Late trophozoite", "Early schizont", "Late schizont", "Gametocyte (committed)", "Gametocyte (developing)", "Gametocyte (branching)", "Female (HE)", "Female (LE)", "Gametocyte (female)", "Gametocyte (early female)", "Gametocyte (late female)", "Gametocyte (male)", "Male (HE)", "Male (LE)", "Gametocyte (early male)", "Gametocyte (late male)", "Unassigned", "Failed qc", "Not assigned", "Atlas")
-
-sample_name_nms <- c("MSC1", "MSC3","MSC13","MSC14","MSC1272") %>% str_sort(numeric = T)
-
-
-sp_colors <- c('Early ring'='#D1EC9F',
-                     'Late ring'='#78C679',
-                     'Early trophozoite'='#FEEEAA',
-                     'Late trophozoite'='#FEB24C',
-                     'Early schizont'='#C9E8F1',
-                     'Late schizont'='#85B1D3',
-                     'Gametocyte (developing)'='thistle',
-                     'Gametocyte (female)'='#551A8B',
-                     'Gametocyte (male)'='mediumpurple',
-               'Unassigned'='red', 
-               'Not assigned'='#D6CFC7',
-               'Female (LE)'='#208cf7',
-               'Female (HE)'='#551A8B',
-               'Male (LE)'='#a894d1',
-               'Male (HE)'='mediumpurple',
-               'Failed QC' = 'grey',
-               'Gametocyte (committed)' = '#C399A2', 
-               'Gametocyte (developing)' = '#66444C', 
-               'Gametocyte (branching)' = '#66444C', 
-               'Gametocyte (early female)' = '#749E89', 
-               'Gametocyte (early male)' = '#7D87B2', 
-               'Gametocyte (late female)' = '#4E6D58', 
-               'Gametocyte (late male)' = '#41507B'
-)
-
-sp_fld_colors <- c('Late ring'= '#78C679',#met.brewer('Java')[2],
-                   'Early trophozoite'='#FEEEAA',#met.brewer('Java')[3],
-                   'Female (LE)'= met.brewer('Ingres')[5],
-                   'Female (HE)'= '#551A8B', #met.brewer('Ingres')[7],
-                   # 'Male (LE)'=met.brewer('Nizami')[6],
-                   # 'Male (HE)'=met.brewer('Nizami')[8],
-                   # 'Gametocyte (male)'=met.brewer('Austria')[5],
-                   'Male (LE)'=met.brewer('Ingres')[7],#'#a2e19e',
-                   'Male (HE)'= 'mediumpurple',#'#039911',
-                   'Gametocyte (male)'='#3DED97',
-                   'Gametocyte (female)'=met.brewer('Ingres')[6],
-                   'Lab' = '#D3D3D3',
-                   'Unassigned'='#DCDCDC',
-                   'Failed QC' = 'grey',
-                   'Not assigned' = 'grey',
-                   'Atlas' = 'grey',
-                   'Early ring'='#D1EC9F',
-                     'Late trophozoite'='#FEB24C',
-                     'Early schizont'='#C9E8F1',
-                     'Late schizont'='#85B1D3',
-                   'Gametocyte (developing)'='thistle',
-                   'early female' = '#749E89',
-                   'late female'= '#4E6D58'
-)
-
-donor_cols_m = c(met.brewer("Thomas")[c(1)],c('#F39EC8','#99ceff', '#b9e589')) %>% set_names(paste0(c("MSC1", "MSC3", "MSC13", "MSC14" ), '.mrna'))
-# donor_cols = met.brewer("Egypt")[c(2,4,1,3)] %>% set_names(paste0(c("MSC1", "MSC3", "MSC13", "MSC14" )))
-donor_cols = c(met.brewer("Thomas")[c(1)],c('#F39EC8','#99ceff', '#b9e589')) %>% set_names(paste0(c("MSC1", "MSC3", "MSC13", "MSC14" )))
-
-"#DC143C"
- "#B22222"
- "#F08080"
- "#FA8072"
+# ##Strain cluster colours
+# strain_cols_n <-c("#910000", "#ff1a8d", "#007c71", "#0ea300", "#00deca", "#9a96c7", "#5d57a4", "#a8875b","#708db3", "#c39a00", "#ffd94d", "#9770b3", "#C9E0F1", "#a40000" , "#00b7a7", "#ffcd12","thistle","#a40000" , "#00b7a7", "#e7f1f9", 'black', '#050301','grey')
+# #, 'lavender', 'lightgray', 'grey'
+# names(strain_cols_n) <- c('SC2', 'SC1','SC5',  'SC4', 'SC3',  'SC6', 'SC7', 'SC8', 'SC9', 'SC10', 'SC11', 'SC12', 'S3_b', 'S1', 'S2', 'Singlet', 'Negative', 'SC1_3i','Doublet', 'Lab', 'Less5', 'PoorQC', NA)
+# 
+# strain_cols <- c(met.brewer(name = 'Thomas')[c(1:8)],'black', 'light gray')
+# 
+# names(strain_cols) = c('G1', 'G2', 'G3', 'G4','G5', 'G6','G7', 'G8', 'Doublet', 'Negative')
+# 
+# strain_cols =c(strain_cols,strain_cols_n)
+# 
+# dblt_cols <- c(brewer.pal(name = 'Set1', n = 8)[c(1:5,7:8)], 'lightblue')
+# names(dblt_cols) <- c('ScDfSt', 'ScDf', 'ScSt', 'DfSt', 'Sc', 'Df','St', 'Singlet')
+# 
+# cell_qc_filt_nm_lvls <- c("sc_neg", "lo_gn_cnt",  "hi_gn_cnt",  "hi_mtp", "ss_db",  "strn_db", "stg_db", "pass")
+# cell_qc_cols <- c(brewer.pal(name = 'Set1', n = 8)[c(1:5,7:8)], 'lightblue') %>% set_names(cell_qc_filt_nm_lvls)
+# 
+# dblt_ss_cols <- c(brewer.pal(name = 'Set1', n = 8)[c(1:3)], 'lightgrey')
+# names(dblt_ss_cols) <- c('Strain & stage', 'Strain', 'Stage', 'Singlet')
+# 
+# cluster_cols <- brewer.pal(8, name = 'Set2')[c(1:4,7,8)] %>% set_names(as.character(c(0:5)))
+# 
+# stg_refnd_lvls = c("Early ring", "Late ring", "Early trophozoite", "Late trophozoite", "Early schizont", "Late schizont", "Gametocyte (committed)", "Gametocyte (developing)", "Gametocyte (branching)", "Female (HE)", "Female (LE)", "Gametocyte (female)", "Gametocyte (early female)", "Gametocyte (late female)", "Gametocyte (male)", "Male (HE)", "Male (LE)", "Gametocyte (early male)", "Gametocyte (late male)", "Unassigned", "Failed qc", "Not assigned", "Atlas")
+# 
+# sample_name_nms <- c("MSC1", "MSC3","MSC13","MSC14","MSC1272") %>% str_sort(numeric = T)
+# 
+# 
+# sp_colors <- c('Early ring'='#D1EC9F',
+#                      'Late ring'='#78C679',
+#                      'Early trophozoite'='#FEEEAA',
+#                      'Late trophozoite'='#FEB24C',
+#                      'Early schizont'='#C9E8F1',
+#                      'Late schizont'='#85B1D3',
+#                      'Gametocyte (developing)'='thistle',
+#                      'Gametocyte (female)'='#551A8B',
+#                      'Gametocyte (male)'='mediumpurple',
+#                'Unassigned'='red', 
+#                'Not assigned'='#D6CFC7',
+#                'Female (LE)'='#208cf7',
+#                'Female (HE)'='#551A8B',
+#                'Male (LE)'='#a894d1',
+#                'Male (HE)'='mediumpurple',
+#                'Failed QC' = 'grey',
+#                'Gametocyte (committed)' = '#C399A2', 
+#                'Gametocyte (developing)' = '#66444C', 
+#                'Gametocyte (branching)' = '#66444C', 
+#                'Gametocyte (early female)' = '#749E89', 
+#                'Gametocyte (early male)' = '#7D87B2', 
+#                'Gametocyte (late female)' = '#4E6D58', 
+#                'Gametocyte (late male)' = '#41507B'
+# )
+# 
+# sp_fld_colors <- c('Late ring'= '#78C679',#met.brewer('Java')[2],
+#                    'Early trophozoite'='#FEEEAA',#met.brewer('Java')[3],
+#                    'Female (LE)'= met.brewer('Ingres')[5],
+#                    'Female (HE)'= '#551A8B', #met.brewer('Ingres')[7],
+#                    # 'Male (LE)'=met.brewer('Nizami')[6],
+#                    # 'Male (HE)'=met.brewer('Nizami')[8],
+#                    # 'Gametocyte (male)'=met.brewer('Austria')[5],
+#                    'Male (LE)'=met.brewer('Ingres')[7],#'#a2e19e',
+#                    'Male (HE)'= 'mediumpurple',#'#039911',
+#                    'Gametocyte (male)'='#3DED97',
+#                    'Gametocyte (female)'=met.brewer('Ingres')[6],
+#                    'Lab' = '#D3D3D3',
+#                    'Unassigned'='#DCDCDC',
+#                    'Failed QC' = 'grey',
+#                    'Not assigned' = 'grey',
+#                    'Atlas' = 'grey',
+#                    'Early ring'='#D1EC9F',
+#                      'Late trophozoite'='#FEB24C',
+#                      'Early schizont'='#C9E8F1',
+#                      'Late schizont'='#85B1D3',
+#                    'Gametocyte (developing)'='thistle',
+#                    'early female' = '#749E89',
+#                    'late female'= '#4E6D58'
+# )
+# 
+# donor_cols_m = c(met.brewer("Thomas")[c(1)],c('#F39EC8','#99ceff', '#b9e589')) %>% set_names(paste0(c("MSC1", "MSC3", "MSC13", "MSC14" ), '.mrna'))
+# # donor_cols = met.brewer("Egypt")[c(2,4,1,3)] %>% set_names(paste0(c("MSC1", "MSC3", "MSC13", "MSC14" )))
+# donor_cols = c(met.brewer("Thomas")[c(1)],c('#F39EC8','#99ceff', '#b9e589')) %>% set_names(paste0(c("MSC1", "MSC3", "MSC13", "MSC14" )))
+# 
+# "#DC143C"
+#  "#B22222"
+#  "#F08080"
+#  "#FA8072"
 ```
 
 ```{r}
 ##colors
-sp_col_new <- c(`Late ring` = "#78C679", `Early trophozoite` = "#FEEEAA", `Female (LE)` = "#a97f2f", 
-Female = "#551A8B", `Male (LE)` = "#7e5522", Male = "mediumpurple", 
-`Gametocyte (male)` = "#1a6c8b", `Gametocyte (female)` = "#d1b252", 
-Lab = "#D3D3D3", Unassigned = "#DCDCDC", `Failed QC` = "grey", 
-`Not assigned` = "grey", Atlas = "grey", `Early ring` = "#D1EC9F", 
-`Late trophozoite` = "#FEB24C", `Early schizont` = "#C9E8F1", 
-`Late schizont` = "#85B1D3", `Gametocyte (developing)` = "thistle", 
-`early female` = "#749E89", `late female` = "#4E6D58", Asexual = "#FF6961", 
-`NULL` = "lightgrey", `Field unlabelled` = "#D2C1DC", "weak_score" = "#c9c9c9", "unclear" = "#dddddd")
+# sp_col_new <- c(`Late ring` = "#78C679", `Early trophozoite` = "#FEEEAA", `Female (LE)` = "#a97f2f", 
+# Female = "#551A8B", `Male (LE)` = "#7e5522", Male = "mediumpurple", 
+# `Gametocyte (male)` = "#1a6c8b", `Gametocyte (female)` = "#d1b252", 
+# Lab = "#D3D3D3", Unassigned = "#DCDCDC", `Failed QC` = "grey", 
+# `Not assigned` = "grey", Atlas = "grey", `Early ring` = "#D1EC9F", 
+# `Late trophozoite` = "#FEB24C", `Early schizont` = "#C9E8F1", 
+# `Late schizont` = "#85B1D3", `Gametocyte (developing)` = "thistle", 
+# `early female` = "#749E89", `late female` = "#4E6D58", Asexual = "#FF6961", 
+# `NULL` = "lightgrey", `Field unlabelled` = "#D2C1DC", "weak_score" = "#c9c9c9", "unclear" = "#dddddd")
 
 ```
 
@@ -208,82 +202,9 @@ source("/nfs/users/nfs_j/jr35/Mali2/mali22_code/pf_common_vars.R")
 ##!!! NOTE The hdf5 matrix makes the running of emptydrops very slow so need to convert to dgCMatrix - https://github.com/MarioniLab/DropletUtils/issues/55
 
 ## Run emptydrops on all 
-# nextflow run ../mali22_code_lnk/nf_scripts/edrops.nf --scrpt "/nfs/users/nfs_j/jr35/multipurpose_scripts/seurat_sce/edrops.R" --input_raw_mtx "/lustre/scratch126/tol/teams/lawniczak/projects/malaria_single_cell/mali_field_runs/2022/data/cellranger_runs/Pf/5736STDY13782211/outs/raw_feature_bc_matrix.h5" --o_path "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/Mali2/data/processed/Pf/" --retain_nm "wo_retain,w_retain" --retain_val "Inf,NULL" --limt "10,50,100,150,200" --fdr_l "0.01" -resume
 # nextflow run ../mali22_code_lnk/nf_scripts/edrops.nf --scrpt "/nfs/users/nfs_j/jr35/multipurpose_scripts/seurat_sce/edrops.R" --input_raw_mtx "/lustre/scratch126/tol/teams/lawniczak/projects/malaria_single_cell/mali_field_runs/2022/data/cellranger_runs/Pf/5736STDY*/outs/raw_feature_bc_matrix.h5" --o_path "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/Mali2/data/processed/Pf/" --retain_nm "wo_retain,w_retain" --retain_val "Inf,NULL" --limt "20,50,100,150,200" --fdr_l "0.01" -resume
 
 
-```
-
-```{r}
-# sce <- read10xCounts("/lustre/scratch126/tol/teams/lawniczak/projects/malaria_single_cell/mali_field_runs/2022/data/cellranger_runs/Pf/5736STDY13782211/outs/raw_feature_bc_matrix.h5")
-# # mito <- which(rowData(sce)$ID=="MIT")
-# # api <- which(rowData(sce)$ID=="API")
-# # stats <- perCellQCMetrics(sce, subsets=list("mit"=mito, "api"=api))
-# # mats1 <- counts(sce)
-# # mats1[1:5,1:5]
-```
-
-```{r}
-
-# mats <- as(counts(sce), "dgCMatrix")
-# mats[1:5,1:5]
-
-```
-
-```{r}
-
-# e.out <- emptyDrops(mats, lower = 50, test.ambient = TRUE)
-```
-
-```{r}
-# is.cell <- e.out$FDR <= 0.01
-# sum(is.cell, na.rm=TRUE)
-
-```
-
-```{r}
-# table(Limited=e.out$Limited, Significant=is.cell)
-```
-```{r}
-# plot(e.out$Total, -e.out$LogProb, col=ifelse(is.cell, "red", "black"),
-#     xlab="Total UMI count", ylab="-Log Probability")
-```
-
-```{r}
-
-# sce2 <- read10xCounts("/lustre/scratch126/tol/teams/lawniczak/projects/malaria_single_cell/mali_field_runs/2022/data/cellranger_runs/Pf/5736STDY13782211/outs/raw_feature_bc_matrix/")
-# 
-# mats3 <- counts(sce2)
-# mats3[1:5,1:5]
-```
-
-```{r}
-# identical(mats, mats3)
-
-```
-
-```{r}
-
-# e.out2 <- emptyDrops(counts(sce2), lower = 50, test.ambient = TRUE)
-```
-
-initialize variable for the sample names
-
-```{r}
-# sample_id <- c("MSC1", "MSC3", "MSC1272", "MSC13", "MSC14" )
-# sample_name <-c("MSC1", "MSC3", "MSC1272", "MSC13", "MSC14" ) %>% str_sort(., numeric = T)
-# mt_filt <- c(5,1.2,0.9,0.45,2)
-
-# slct_sample_names <-c("MSC48", "MSC68", "MSC14", "MSC49", "MSC70") %>% str_sort(., numeric = T)
-slct_sample_names <-c("MSC48", "MSC68", "MSC14", "MSC49", "MSC60", "MSC66", "MSC67", "MSC70", "MSC24", "MSC33", "MSC40", "MSC54", "MSC55") %>% str_sort(., numeric = T)
-# slct_sample_names <-c("MSC48", "MSC68", "MSC14", "MSC49", "MSC60", "MSC66", "MSC67",  "MSC24", "MSC33", "MSC40", "MSC54", "MSC55") %>% str_sort(., numeric = T)
-
-# slct_sample_names <-c("MSC24", "MSC68", "MSC14", "MSC49", "MSC55") %>% str_sort(., numeric = T)
-
-# mt_filt <- c(2)
-
-# source_irods <- c("5736STDY11771545", "5736STDY11771544", "5736STDY11771536", "5736STDY11771546", "5736STDY11771535")
-# sample_name <- c("MSC1272", "MSC13", "MSC3", "MSC14", "MSC1")
 ```
 
 ###################START- RAW READING#############
@@ -294,11 +215,11 @@ pf_solo_mixed_mdata_decode <- read_csv("data/raw/pf_solo_mixed_mdata_decode.csv"
 
 ## Genotype clustering for MSC
 
-Read in clusters.tsv files with assignment of cells to strains and PCA plots metrics
-
-Transfer clusters.tsv files with assignment of cells to strains and PCA plots metrics for the best K from farm to my local Mac
+initialize variable for the sample names
 
 ```{r}
+# select sample names
+# slct_sample_names <-c("MSC48", "MSC68", "MSC14", "MSC49", "MSC60", "MSC66", "MSC67", "MSC70", "MSC24", "MSC33", "MSC40", "MSC54", "MSC55") %>% str_sort(., numeric = T)
 
 slct_sample_names <- pf_solo_mixed_mdata_decode$sample_nm
 ## get relevant sample names
