Adding the cellbender metadata to the raw file at the very onset after reading in raw matrix and deleting some unnecessary chunks

--- a/local_rmd_nbooks/m2_actual_cells_frm_raw.Rmd
+++ b/local_rmd_nbooks/m2_actual_cells_frm_raw.Rmd
@@ -80,111 +80,6 @@ knitr::opts_knit$set(root.dir = '/lustre/scratch126/tol/teams/lawniczak/users/jr
 
 ```
 
-### Variable declarations
-
-```{r}
-
-# ##Strain cluster colours
-# strain_cols_n <-c("#910000", "#ff1a8d", "#007c71", "#0ea300", "#00deca", "#9a96c7", "#5d57a4", "#a8875b","#708db3", "#c39a00", "#ffd94d", "#9770b3", "#C9E0F1", "#a40000" , "#00b7a7", "#ffcd12","thistle","#a40000" , "#00b7a7", "#e7f1f9", 'black', '#050301','grey')
-# #, 'lavender', 'lightgray', 'grey'
-# names(strain_cols_n) <- c('SC2', 'SC1','SC5',  'SC4', 'SC3',  'SC6', 'SC7', 'SC8', 'SC9', 'SC10', 'SC11', 'SC12', 'S3_b', 'S1', 'S2', 'Singlet', 'Negative', 'SC1_3i','Doublet', 'Lab', 'Less5', 'PoorQC', NA)
-# 
-# strain_cols <- c(met.brewer(name = 'Thomas')[c(1:8)],'black', 'light gray')
-# 
-# names(strain_cols) = c('G1', 'G2', 'G3', 'G4','G5', 'G6','G7', 'G8', 'Doublet', 'Negative')
-# 
-# strain_cols =c(strain_cols,strain_cols_n)
-# 
-# dblt_cols <- c(brewer.pal(name = 'Set1', n = 8)[c(1:5,7:8)], 'lightblue')
-# names(dblt_cols) <- c('ScDfSt', 'ScDf', 'ScSt', 'DfSt', 'Sc', 'Df','St', 'Singlet')
-# 
-# cell_qc_filt_nm_lvls <- c("sc_neg", "lo_gn_cnt",  "hi_gn_cnt",  "hi_mtp", "ss_db",  "strn_db", "stg_db", "pass")
-# cell_qc_cols <- c(brewer.pal(name = 'Set1', n = 8)[c(1:5,7:8)], 'lightblue') %>% set_names(cell_qc_filt_nm_lvls)
-# 
-# dblt_ss_cols <- c(brewer.pal(name = 'Set1', n = 8)[c(1:3)], 'lightgrey')
-# names(dblt_ss_cols) <- c('Strain & stage', 'Strain', 'Stage', 'Singlet')
-# 
-# cluster_cols <- brewer.pal(8, name = 'Set2')[c(1:4,7,8)] %>% set_names(as.character(c(0:5)))
-# 
-# stg_refnd_lvls = c("Early ring", "Late ring", "Early trophozoite", "Late trophozoite", "Early schizont", "Late schizont", "Gametocyte (committed)", "Gametocyte (developing)", "Gametocyte (branching)", "Female (HE)", "Female (LE)", "Gametocyte (female)", "Gametocyte (early female)", "Gametocyte (late female)", "Gametocyte (male)", "Male (HE)", "Male (LE)", "Gametocyte (early male)", "Gametocyte (late male)", "Unassigned", "Failed qc", "Not assigned", "Atlas")
-# 
-# sample_name_nms <- c("MSC1", "MSC3","MSC13","MSC14","MSC1272") %>% str_sort(numeric = T)
-# 
-# 
-# sp_colors <- c('Early ring'='#D1EC9F',
-#                      'Late ring'='#78C679',
-#                      'Early trophozoite'='#FEEEAA',
-#                      'Late trophozoite'='#FEB24C',
-#                      'Early schizont'='#C9E8F1',
-#                      'Late schizont'='#85B1D3',
-#                      'Gametocyte (developing)'='thistle',
-#                      'Gametocyte (female)'='#551A8B',
-#                      'Gametocyte (male)'='mediumpurple',
-#                'Unassigned'='red', 
-#                'Not assigned'='#D6CFC7',
-#                'Female (LE)'='#208cf7',
-#                'Female (HE)'='#551A8B',
-#                'Male (LE)'='#a894d1',
-#                'Male (HE)'='mediumpurple',
-#                'Failed QC' = 'grey',
-#                'Gametocyte (committed)' = '#C399A2', 
-#                'Gametocyte (developing)' = '#66444C', 
-#                'Gametocyte (branching)' = '#66444C', 
-#                'Gametocyte (early female)' = '#749E89', 
-#                'Gametocyte (early male)' = '#7D87B2', 
-#                'Gametocyte (late female)' = '#4E6D58', 
-#                'Gametocyte (late male)' = '#41507B'
-# )
-# 
-# sp_fld_colors <- c('Late ring'= '#78C679',#met.brewer('Java')[2],
-#                    'Early trophozoite'='#FEEEAA',#met.brewer('Java')[3],
-#                    'Female (LE)'= met.brewer('Ingres')[5],
-#                    'Female (HE)'= '#551A8B', #met.brewer('Ingres')[7],
-#                    # 'Male (LE)'=met.brewer('Nizami')[6],
-#                    # 'Male (HE)'=met.brewer('Nizami')[8],
-#                    # 'Gametocyte (male)'=met.brewer('Austria')[5],
-#                    'Male (LE)'=met.brewer('Ingres')[7],#'#a2e19e',
-#                    'Male (HE)'= 'mediumpurple',#'#039911',
-#                    'Gametocyte (male)'='#3DED97',
-#                    'Gametocyte (female)'=met.brewer('Ingres')[6],
-#                    'Lab' = '#D3D3D3',
-#                    'Unassigned'='#DCDCDC',
-#                    'Failed QC' = 'grey',
-#                    'Not assigned' = 'grey',
-#                    'Atlas' = 'grey',
-#                    'Early ring'='#D1EC9F',
-#                      'Late trophozoite'='#FEB24C',
-#                      'Early schizont'='#C9E8F1',
-#                      'Late schizont'='#85B1D3',
-#                    'Gametocyte (developing)'='thistle',
-#                    'early female' = '#749E89',
-#                    'late female'= '#4E6D58'
-# )
-# 
-# donor_cols_m = c(met.brewer("Thomas")[c(1)],c('#F39EC8','#99ceff', '#b9e589')) %>% set_names(paste0(c("MSC1", "MSC3", "MSC13", "MSC14" ), '.mrna'))
-# # donor_cols = met.brewer("Egypt")[c(2,4,1,3)] %>% set_names(paste0(c("MSC1", "MSC3", "MSC13", "MSC14" )))
-# donor_cols = c(met.brewer("Thomas")[c(1)],c('#F39EC8','#99ceff', '#b9e589')) %>% set_names(paste0(c("MSC1", "MSC3", "MSC13", "MSC14" )))
-# 
-# "#DC143C"
-#  "#B22222"
-#  "#F08080"
-#  "#FA8072"
-```
-
-```{r}
-##colors
-# sp_col_new <- c(`Late ring` = "#78C679", `Early trophozoite` = "#FEEEAA", `Female (LE)` = "#a97f2f", 
-# Female = "#551A8B", `Male (LE)` = "#7e5522", Male = "mediumpurple", 
-# `Gametocyte (male)` = "#1a6c8b", `Gametocyte (female)` = "#d1b252", 
-# Lab = "#D3D3D3", Unassigned = "#DCDCDC", `Failed QC` = "grey", 
-# `Not assigned` = "grey", Atlas = "grey", `Early ring` = "#D1EC9F", 
-# `Late trophozoite` = "#FEB24C", `Early schizont` = "#C9E8F1", 
-# `Late schizont` = "#85B1D3", `Gametocyte (developing)` = "thistle", 
-# `early female` = "#749E89", `late female` = "#4E6D58", Asexual = "#FF6961", 
-# `NULL` = "lightgrey", `Field unlabelled` = "#D2C1DC", "weak_score" = "#c9c9c9", "unclear" = "#dddddd")
-
-```
-
 ### Common functions
 
 #### Source commong functions, varriables and tables
@@ -1007,17 +902,17 @@ bind_rows(edrops_cbender_mdata, .id = "donor") %>%
 
 
 ```{r}
-# edrops_cbender_mdata_uni <- map(edrops_cbender_mdata, ~.x%>% 
-#     filter(!(is.na(is_cell_cr) & is_cell_cb == "nonCell" & is.na(is_cell_ed))) %>% 
-#     mutate(mthds_union = case_when(is_cell_cr == "CellCr" & str_detect(is_cell_cb, "CellCb.") & is_cell_ed == "CellEd" ~ "CrCbEd",
-#                                    is_cell_cr == "CellCr" & str_detect(is_cell_cb, "CellCb.") & is.na(is_cell_ed) ~ "CrCb",
-#                                    is_cell_cr == "CellCr" & (str_detect(is_cell_cb, "nonCell") | is.na(is_cell_cb)) & is_cell_ed == "CellEd" ~ "CrEd",
-#                                    is.na(is_cell_cr) & str_detect(is_cell_cb, "CellCb.") & is_cell_ed == "CellEd" ~ "CbEd",
-#                                    is_cell_cr == "CellCr" & (str_detect(is_cell_cb, "nonCell") | is.na(is_cell_cb)) & is.na(is_cell_ed) ~ "Cr",
-#                                    is.na(is_cell_cr) & str_detect(is_cell_cb, "CellCb.") & is.na(is_cell_ed) ~ "Cb",
-#                                    is.na(is_cell_cr) & (str_detect(is_cell_cb, "nonCell") | is.na(is_cell_cb)) & is_cell_ed == "CellEd" ~ "Ed"),
-#            across(mthds_union, ~factor(., levels = c("CrCbEd", "CrCb", "CrEd", "CbEd", "Cr", "Cb", "Ed"))))
-# ) 
+edrops_cbender_mdata_uni <- map(edrops_cbender_mdata, ~.x%>%
+    filter(!(is.na(is_cell_cr) & is_cell_cb == "nonCell" & is.na(is_cell_ed))) %>%
+    mutate(mthds_union = case_when(is_cell_cr == "CellCr" & str_detect(is_cell_cb, "CellCb") & is_cell_ed == "CellEd" ~ "CrCbEd",
+                                   is_cell_cr == "CellCr" & str_detect(is_cell_cb, "CellCb") & is.na(is_cell_ed) ~ "CrCb",
+                                   is_cell_cr == "CellCr" & (str_detect(is_cell_cb, "nonCell") | is.na(is_cell_cb)) & is_cell_ed == "CellEd" ~ "CrEd",
+                                   is.na(is_cell_cr) & str_detect(is_cell_cb, "CellCb") & is_cell_ed == "CellEd" ~ "CbEd",
+                                   is_cell_cr == "CellCr" & (str_detect(is_cell_cb, "nonCell") | is.na(is_cell_cb)) & is.na(is_cell_ed) ~ "Cr",
+                                   is.na(is_cell_cr) & str_detect(is_cell_cb, "CellCb") & is.na(is_cell_ed) ~ "Cb",
+                                   is.na(is_cell_cr) & (str_detect(is_cell_cb, "nonCell") | is.na(is_cell_cb)) & is_cell_ed == "CellEd" ~ "Ed"),
+           across(mthds_union, ~factor(., levels = c("CrCbEd", "CrCb", "CrEd", "CbEd", "Cr", "Cb", "Ed"))))
+)
 
 edrops_cbender8_mdata_uni <- map(edrops_cbender_mdata, ~.x%>% 
     filter(!(is.na(is_cell_cr) & (is_cell_cb == "nonCell" | is_cell_cb == "CellCb.5") & is.na(is_cell_ed))) %>% 
@@ -1034,16 +929,19 @@ edrops_cbender8_mdata_uni <- map(edrops_cbender_mdata, ~.x%>%
 ```
 
 ```{r}
-# map(edrops_cbender_mdata_uni, ~.x %>% count(is_cell_cr, is_cell_ed, is_cell_cb,mthds_union))
+map(edrops_cbender_mdata_uni, ~.x %>% count(is_cell_cr, is_cell_ed, is_cell_cb,mthds_union))
 map(edrops_cbender8_mdata_uni, ~.x %>% dplyr::count(is_cell_cr, is_cell_ed, is_cell_cb,mthds_union))
 
 ```
 
 ```{r}
 saveRDS(edrops_cbender8_mdata_uni, "data/processed/Pf/m2_all/edrops_cbender8_mdata_uni.RDS")
+saveRDS(edrops_cbender_mdata_uni, "data/processed/Pf/m2_all/edrops_cbender_mdata_uni.RDS")
+
 ```
 
 ```{r, fig.width=10, fig.height=12}
+
 map(edrops_cbender8_mdata_uni, ~.x %>% count(mthds_union)) %>%
   bind_rows(., .id = "donor") %>%
   ggplot(aes(y = n/1000, x = mthds_union, fill = mthds_union)) +
@@ -1062,7 +960,7 @@ map(edrops_cbender8_mdata_uni, ~.x %>% count(mthds_union)) %>%
 
 
 ```{r, message=F, warning=F, eval=T, fig.height=14, fig.width=12}
-    bind_rows(edrops_cbender8_mdata_uni, .id = "donor") %>%
+bind_rows(edrops_cbender8_mdata_uni, .id = "donor") %>%
     ggplot(aes(x = log10(pf_gn_count), y = log10(hs_gn_count), colour = mthds_union)) +
     geom_point(size = 0.01) +
     geom_density_2d() +
@@ -1227,6 +1125,7 @@ gogo()
 
 
 ```{r}
+# Add emptydrops metadata
 all_msc_bp_raw <- pmap(list(edrops_cbender_pf100_mdata, all_msc_bp_raw[names(edrops_cbender_pf100_mdata)]), ~{
   ..1 %>% 
     column_to_rownames("bcode") %>%
@@ -1237,44 +1136,25 @@ all_msc_bp_raw <- pmap(list(edrops_cbender_pf100_mdata, all_msc_bp_raw[names(edr
 ```
 
 
-```{r}
-# all_msc_bp_raw <- pmap(list(edrops_cbender8_mdata_uni, all_msc_bp_raw[names(edrops_cbender8_mdata_uni)]), ~{
-#   ..1 %>% 
-#     column_to_rownames("bcode") %>%
-#     select(mthds_union) %>%
-#     AddMetaData(..2, .) 
-#     
-# })
-```
+```{r, message=FALSE}
+# Add cellbender metadata
+all_msc_bp_raw <- list(all_msc_bp_raw, all_cbender_mdata, edrops_cbender_mdata_uni[names(all_msc_bp_raw)]) %>%
+  pmap(~ {
+    ..2 %>%
+      left_join(., ..3, by = c("barcode" = "bcode")) %>%
+      select(barcode, cell_size, background_fraction, droplet_efficiency, mthds_union) %>%
+      column_to_rownames("barcode") %>%
+      AddMetaData(..1, .)
+       })
 
-
-
-```{r, message=F, warning=F, eval=T}
-##Read BPcells matrices
-# all_msc_raw_mdata <- map2(all_msc_bp_raw, all_msc_bp_filt, ~.x@meta.data %>% filter(nFeature_RNA > 10) %>% rownames_to_column("bcode") %>% mutate(cr_filt = case_when(bcode %in% rownames(.y@meta.data) ~ "Yes", T ~ "No"))) 
 ```
 
 
 ```{r, message=F, warning=F, eval=T}
 ##Read BPcells matrices
-all_msc_raw_mdata_full <- map(all_msc_bp_raw, ~.x@meta.data %>% 
+all_msc_raw_mdata <- map(all_msc_bp_raw, ~.x@meta.data %>% 
                            filter(nCount_RNA > 1) %>%
-                           rownames_to_column("bcode") 
-                         ) 
-```
-
-```{r}
-# saveRDS(all_msc_raw_mdata_full, "data/processed/Pf/m2_all/all_msc_raw_mdata_full.RDS")
-```
-
-```{r}
-# all_msc_raw_mdata_full <- readRDS("data/processed/Pf/m2_all/all_msc_raw_mdata_full.RDS")
-```
-
-```{r, message=F, warning=F, eval=T}
-##Read BPcells matrices
-all_msc_raw_mdata <- map(all_msc_raw_mdata_full, ~.x %>% 
-                           filter(nCount_RNA > 5) %>%
+                           rownames_to_column("bcode")  %>%
                            mutate(across(contains("is_cell"), ~replace_na(., "empty_bc")))
                          ) 
 ```
