--- a/local_rmd_nbooks/m2_prelim_stg_anno_cell_caller_comprsn.Rmd
+++ b/local_rmd_nbooks/m2_prelim_stg_anno_cell_caller_comprsn.Rmd
@@ -345,9 +345,6 @@ map(all_pref_pred[1], ~plotDeltaDistribution(.x))
 
 ################## evaluate singleR MAnually
 
-###### Add metadata from above to the objects
-
-
 ```{r, message=FALSE}
 ## get predictions for stages
 all_pref_pred_df <- map(all_pref_pred, ~.x[, c("scores", "labels", "pruned.labels", "reference")] %>% 
@@ -358,20 +355,22 @@ all_pref_pred_df <- map(all_pref_pred, ~.x[, c("scores", "labels", "pruned.label
 
 
 ```{r, message=FALSE, warning=FALSE}
+all_pref_pred_df <- map2(all_pref_pred_df, all_pref_pred, ~{
+  df <- .x %>% 
+    mutate(sr_score_ref = paste0("scores_", names(.y@listData$orig.results)[reference], "_scores"),
+           sr_labl_ref = paste0("scores_", names(.y@listData$orig.results)[reference], "_labels")) 
+    
+  # df$sR_actl_score <- mapply(function(row, colname) df[row, colname], row = seq_len(nrow(df)), colname = df$sr_score_ref) ## baseR
 
-all_pref_pred_df_com_scores <- map(all_pref_pred_df, ~{
-  .x %>% 
-    mutate(actl_score = case_when(reference == 1 ~ scores_MSC13_scores,
-                                  reference == 2 ~ scores_MSC14_scores),
-           pred_stage = case_when(reference == 1 ~ scores_MSC13_labels,
-                                  reference == 2 ~ scores_MSC14_labels),
-           lab_consistency = case_when(scores_MSC13_labels == scores_MSC14_labels ~ labels,
-                                       str_detect(scores_MSC13_labels, "Female") & str_detect(scores_MSC14_labels, "Female") ~ labels,
-                                       str_detect(scores_MSC13_labels, "Male") & str_detect(scores_MSC14_labels, "Male") ~ labels,
-                                       scores_MSC14_labels %in% c("Late ring", "Early trophozoite") ~ labels,
-                                       str_detect(scores_MSC13_labels, "Female") & str_detect(scores_MSC14_labels, "Male") ~ "FemaleMale",
-                                       str_detect(scores_MSC13_labels, "Male") & str_detect(scores_MSC14_labels, "Female") ~ "FemaleMale", 
-                                       scores_MSC13_labels != scores_MSC14_labels & !(scores_MSC14_labels %in% c("Late ring", "Early trophozoite"))  ~ "unclear"))
+  df <- df %>% 
+    mutate(actl_score = purrr::map2_dbl(row_number(), sr_score_ref, ~df[.x, .y]),
+           actl_labl = purrr::map2_chr(row_number(), sr_labl_ref, ~df[.x, .y]),
+           MaleFem_consistency = case_when(if_any(ends_with("_labels"), ~str_detect(., "Female")) & if_any(ends_with("_labels"), ~str_detect(., "Male")) ~ "MaleFem",
+                                              T ~ labels))
+    
+
+  return(df)
+  
   
 })
 
@@ -379,58 +378,23 @@ all_pref_pred_df_com_scores <- map(all_pref_pred_df, ~{
 
 ```{r, message=FALSE, warning=FALSE}
 
-# all_pref_pred_df_com_scores <- map(all_pref_pred_df, ~{
-#   .x %>% 
-#   pivot_longer(cols = contains("scores_"), names_to = "pred_stage", values_to = "scores", values_drop_na = T)%>% 
-#   mutate(across(pred_stage, ~str_replace_all(., c("scores_" = "", "_LE" = " (LE)", "Early_trophozoite" = "Early trophozoite", "Late_ring" = "Late ring")))) %>%
-#   mutate(actl_score = case_when(reference == 2 & pred_stage == labels ~ scores,
-#                                 reference == 1 & pred_stage == paste0(labels, "_1") ~ scores)) %>% 
-#   group_by(bcode) %>% 
-#   mutate(lab_consistency =case_when(all(is.na(actl_score)) & reference == 2 & pred_stage == paste0(labels, "_1") ~ "unclear",
-#                              all(is.na(actl_score)) & reference == 1 & pred_stage == labels  ~ "unclear")) %>% 
-#   ungroup() %>%
-#   mutate(across(actl_score, ~case_when(lab_consistency ==  "unclear" ~ scores,
-#                                        T ~ .)))
-#   })
-#   
+map(all_pref_pred_df, ~.x %>% count(labels, sR_actl_labl, sR_MaleFem_consistency, sR_MaleFem_consistencym1314) %>% filter(sR_MaleFem_consistency == "MaleFem"))
 ```
+
 
 ```{r, message=FALSE, warning=FALSE}
 
-map(all_pref_pred_df_com_scores, ~.x %>% group_by(bcode) %>% filter(any(lab_consistency == "unclear")))
-  
-```
-
-```{r, message=FALSE, warning=FALSE}
-
-all_pref_pred_df_com_scores_fnl <- map(all_pref_pred_df_com_scores, ~.x %>% 
+all_pref_pred_df_fnl <- map(all_pref_pred_df, ~.x %>% 
                                          # filter(!is.na(actl_score)) %>% 
-                                         # select("bcode", "labels", "pruned.labels", "reference", "pred_stage", "scores", "actl_score", "lab_consistency") %>% 
-                                         select("bcode", "labels", "pruned.labels", "reference", "pred_stage", "actl_score", "lab_consistency") %>% 
-                                         mutate(#across(lab_consistency, ~replace_na(lab_consistency, "consistent")),
-                                                fine_stg = case_when(#lab_consistency == "unclear" ~ "unclear",
-                                                                     is.na(pruned.labels) ~ "weak_score",
-                                                                     lab_consistency == "FemaleMale" ~ "discrepantFM",
-                                                                     T ~ pruned.labels)))
+                                         select("bcode", "labels", "pruned.labels", "reference", "actl_labl", "actl_score", "MaleFem_consistency") %>% 
+                                         mutate(fine_stg = case_when(is.na(pruned.labels) ~ "weak_score",
+                                                                     MaleFem_consistency == "MaleFem" ~ "discrepantFM",
+                                                                     T ~ pruned.labels)) %>%
+                                         rename_with(~paste0("sR_", .), .cols = -c(bcode)))
   
 ```
 
-
-
-```{r, message=FALSE, warning=FALSE}
-
-# all_pref_pred_df[[1]] %>% 
-#   pivot_longer(cols = contains("scores_"), names_to = "pred_stage", values_to = "scores")%>% 
-#   mutate(across(pred_stage, ~str_replace_all(., c("scores_" = "", "_LE" = " (LE)", "Early_trophozoite" = "Early trophozoite", "Late_ring" = "Late ring")))) %>%
-#   mutate(actl_score = case_when(reference == 2 & pred_stage == labels ~ scores,
-#                                 reference == 1 & pred_stage == paste0(labels, "_1") ~ scores)) %>% 
-#   mutate(drop_out =case_when(reference == 1 & pred_stage == paste0(labels, "_1") & is.na(scores) ~ "unclear",
-#                              reference == 2 & pred_stage == labels & is.na(scores) ~ "unclear")) %>%
-#   filter(!is.na(actl_score) | !is.na(drop_out) ) %>%
-#   select(bcode, actl_score)
-  
-```
-
+################## END evaluate singleR MAnually
 
 ```{r, message=F, warning=F}
 ##Read BPcells matrices
@@ -447,12 +411,19 @@ all_seu <- list.files("data/processed/Pf", pattern = "bpc_seu_(cr|cbendr|edrops5
 ```{r, message=FALSE}
 ##Doublet removal
 # all_ed_pref_w_mdata <- list(all_ed_pref_norm, all_pref_pred_df_com_scores_fnl, all_pref_dblt_clst_df, str_remove(names(all_ed_pref), "_.*")) %>%
-all_ed_pref_w_mdata <- list(all_seu, all_pref_pred_df_com_scores_fnl) %>%
+all_seu_prelim_stg <- list(all_seu, all_pref_pred_df_fnl) %>%
   pmap(~ {
     ..2 %>%
       column_to_rownames("bcode") %>%
       AddMetaData(..1, .)
        })
+
+```
+
+
+```{r, eval=T}
+## write out seurat bpcells object files for normalization processing in farm
+imap(all_seu_prelim_stg, ~saveRDS(.x, paste0("data/processed/Pf/",str_remove(.y, "_[cr|ed|cb].*"), "/seu_obj/bpseu", str_extract(.y, "_[cr|ed|cb].*"), "_prelim_stg.RDS")))
 
 ```
 
@@ -1357,149 +1328,7 @@ soupo_kselect <- soupo_kselect %>% mutate(don = str_remove(sample_k, "_.*"))
 ###### Add metadata from above to the objects
 
 
-```{r, message=FALSE}
-## get predictions for stages
-all_pref_pred_df <- map(all_pref_pred, ~.x[, c("scores", "labels", "pruned.labels", "reference")] %>% 
-                          as.data.frame() %>% 
-                          rename_with(~str_replace_all(., c("\\.\\."="_", "\\."="_", "_$"="")), contains("score")) %>%
-                          rownames_to_column("bcode"))
-```
 
-
-```{r, message=FALSE, warning=FALSE}
-all_pref_pred_df <- map2(all_pref_pred_df, all_pref_pred, ~{
-  df <- .x %>% 
-    mutate(sr_score_ref = paste0("scores_", names(.y@listData$orig.results)[reference], "_scores"),
-           sr_labl_ref = paste0("scores_", names(.y@listData$orig.results)[reference], "_labels")) 
-    
-  # df$sR_actl_score <- mapply(function(row, colname) df[row, colname], row = seq_len(nrow(df)), colname = df$sr_score_ref) ## baseR
-
-  df <- df %>% 
-    mutate(actl_score = purrr::map2_dbl(row_number(), sr_score_ref, ~df[.x, .y]),
-           actl_labl = purrr::map2_chr(row_number(), sr_labl_ref, ~df[.x, .y]),
-           MaleFem_consistency = case_when(if_any(ends_with("_labels"), ~str_detect(., "Female")) & if_any(ends_with("_labels"), ~str_detect(., "Male")) ~ "MaleFem",
-                                              T ~ labels))
-    
-
-  return(df)
-  
-  
-})
-
-```
-
-```{r, message=FALSE, warning=FALSE}
-
-map(all_pref_pred_df, ~.x %>% count(labels, sR_actl_labl, sR_MaleFem_consistency, sR_MaleFem_consistencym1314) %>% filter(sR_MaleFem_consistency == "MaleFem"))
-```
-
-
-```{r, message=FALSE, warning=FALSE}
-
-all_pref_pred_df_fnl <- map(all_pref_pred_df, ~.x %>% 
-                                         # filter(!is.na(actl_score)) %>% 
-                                         select("bcode", "labels", "pruned.labels", "reference", "actl_labl", "actl_score", "MaleFem_consistency") %>% 
-                                         mutate(fine_stg = case_when(is.na(pruned.labels) ~ "weak_score",
-                                                                     MaleFem_consistency == "MaleFem" ~ "discrepantFM",
-                                                                     T ~ pruned.labels)) %>%
-                                         rename_with(~paste0("sR_", .), .cols = -c(bcode)))
-  
-```
-
-
-```{r, message=FALSE, warning=FALSE}
-
-all_pref_pred_df_com_scores <- map(all_pref_pred_df, ~{
-  .x %>% 
-    mutate(actl_score = case_when(reference == 1 ~ scores_MSC13_scores,
-                                  reference == 2 ~ scores_MSC14_scores),
-           pred_stage = case_when(reference == 1 ~ scores_MSC13_labels,
-                                  reference == 2 ~ scores_MSC14_labels),
-           lab_consistency = case_when(scores_MSC13_labels == scores_MSC14_labels ~ labels,
-                                       str_detect(scores_MSC13_labels, "Female") & str_detect(scores_MSC14_labels, "Female") ~ labels,
-                                       str_detect(scores_MSC13_labels, "Male") & str_detect(scores_MSC14_labels, "Male") ~ labels,
-                                       scores_MSC14_labels %in% c("Late ring", "Early trophozoite") ~ labels,
-                                       str_detect(scores_MSC13_labels, "Female") & str_detect(scores_MSC14_labels, "Male") ~ "FemaleMale",
-                                       str_detect(scores_MSC13_labels, "Male") & str_detect(scores_MSC14_labels, "Female") ~ "FemaleMale", 
-                                       scores_MSC13_labels != scores_MSC14_labels & !(scores_MSC14_labels %in% c("Late ring", "Early trophozoite"))  ~ "unclear"))
-  
-})
-
-```
-
-```{r, message=FALSE, warning=FALSE}
-
-# all_pref_pred_df_com_scores <- map(all_pref_pred_df, ~{
-#   .x %>% 
-#   pivot_longer(cols = contains("scores_"), names_to = "pred_stage", values_to = "scores", values_drop_na = T)%>% 
-#   mutate(across(pred_stage, ~str_replace_all(., c("scores_" = "", "_LE" = " (LE)", "Early_trophozoite" = "Early trophozoite", "Late_ring" = "Late ring")))) %>%
-#   mutate(actl_score = case_when(reference == 2 & pred_stage == labels ~ scores,
-#                                 reference == 1 & pred_stage == paste0(labels, "_1") ~ scores)) %>% 
-#   group_by(bcode) %>% 
-#   mutate(lab_consistency =case_when(all(is.na(actl_score)) & reference == 2 & pred_stage == paste0(labels, "_1") ~ "unclear",
-#                              all(is.na(actl_score)) & reference == 1 & pred_stage == labels  ~ "unclear")) %>% 
-#   ungroup() %>%
-#   mutate(across(actl_score, ~case_when(lab_consistency ==  "unclear" ~ scores,
-#                                        T ~ .)))
-#   })
-#   
-```
-
-```{r, message=FALSE, warning=FALSE}
-
-map(all_pref_pred_df_com_scores, ~.x %>% group_by(bcode) %>% filter(any(lab_consistency == "unclear")))
-  
-```
-
-```{r, message=FALSE, warning=FALSE}
-
-all_pref_pred_df_com_scores_fnl <- map(all_pref_pred_df_com_scores, ~.x %>% 
-                                         filter(!is.na(actl_score)) %>% 
-                                         # select("bcode", "labels", "pruned.labels", "reference", "pred_stage", "scores", "actl_score", "lab_consistency") %>% 
-                                         select("bcode", "labels", "pruned.labels", "reference", "pred_stage", "actl_score", "lab_consistency") %>% 
-                                         mutate(#across(lab_consistency, ~replace_na(lab_consistency, "consistent")),
-                                                fine_stg = case_when(#lab_consistency == "unclear" ~ "unclear",
-                                                                     is.na(pruned.labels) ~ "weak_score",
-                                                                     lab_consistency == "FemaleMale" ~ "discrepantFM",
-                                                                     T ~ pruned.labels)))
-  
-```
-
-
-
-```{r, message=FALSE, warning=FALSE}
-
-# all_pref_pred_df[[1]] %>% 
-#   pivot_longer(cols = contains("scores_"), names_to = "pred_stage", values_to = "scores")%>% 
-#   mutate(across(pred_stage, ~str_replace_all(., c("scores_" = "", "_LE" = " (LE)", "Early_trophozoite" = "Early trophozoite", "Late_ring" = "Late ring")))) %>%
-#   mutate(actl_score = case_when(reference == 2 & pred_stage == labels ~ scores,
-#                                 reference == 1 & pred_stage == paste0(labels, "_1") ~ scores)) %>% 
-#   mutate(drop_out =case_when(reference == 1 & pred_stage == paste0(labels, "_1") & is.na(scores) ~ "unclear",
-#                              reference == 2 & pred_stage == labels & is.na(scores) ~ "unclear")) %>%
-#   filter(!is.na(actl_score) | !is.na(drop_out) ) %>%
-#   select(bcode, actl_score)
-  
-```
-
-
-```{r, message=FALSE}
-all_pref_pred[[1]]["ACAAAGAGTAGCTTGT-1",]@listData$orig.results$MSC14$scores
-all_pref_pred[[1]]["ACAAAGAGTAGCTTGT-1",]@listData$orig.results$MSC14$labels
-all_pref_pred[[1]]["ACAAAGAGTAGCTTGT-1",]@listData$orig.results$MSC13$scores
-all_pref_pred[[1]]["ACAAAGAGTAGCTTGT-1",]@listData$orig.results$MSC13$labels
-all_pref_pred[[1]]["ACAAAGAGTAGCTTGT-1",]$scores
-all_pref_pred[[1]]["ACAAAGAGTAGCTTGT-1",]$labels
-all_pref_pred[[1]]["ACAAAGAGTAGCTTGT-1",]$reference
-```
-
-```{r, message=FALSE}
-all_pref_pred[[1]]["ACAAAGACACACAGCC-1",]@listData$orig.results$MSC14$scores
-all_pref_pred[[1]]["ACAAAGACACACAGCC-1",]@listData$orig.results$MSC14$labels
-all_pref_pred[[1]]["ACAAAGACACACAGCC-1",]@listData$orig.results$MSC13$scores
-all_pref_pred[[1]]["ACAAAGACACACAGCC-1",]@listData$orig.results$MSC13$labels
-all_pref_pred[[1]]["ACAAAGACACACAGCC-1",]$labels
-all_pref_pred[[1]]["ACAAAGACACACAGCC-1",]$reference
-```
 
 
 ```{r, message=FALSE}
